fixed body overflow

--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,7 @@ ul {
 body {
   height: 200vh;
   position: absolute;
+  overflow: hidden;
   left: 0;
   right: 0;
 }
